--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,146 @@
 /* Google fonts  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
-body{ font-family: 'Poppins', sans-serif;}
 
+/* Common styles */
+body{ font-family: 'Poppins', sans-serif; background-color: #F3F1FF;}
 
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.container{
+    width: 870px;
+    background-color: #fff;
+    margin-top: 25px;
+    padding: 30px;
+    border-radius: 8px;
+}
+
+hr{
+    border: 1px solid #D1D1D1;
+    margin: 25px 0;
+
+}
+
+/* Top players section  */
+
+.section-title{
+    color: #562EFF;
+    font-size: 24px;
+    margin-top: 3px;
+    font-weight: 500;
+}
+
+.players{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 30px;
+}
+
+.player{
+    display: flex;
+    align-items: center;
+    gap: 18px;
+}
+.player img{
+    width: 56px;
+    height: 56px;
+}
+
+.player-name{
+    font-size: 18px;
+    font-weight: 500;
+    color: #000;
+}
+
+/* ----------------------------- 
+        Top Blog section 
+-------------------------- */
+
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
+.blog{
+    display: flex; gap: 16px;
+}
+.blog img{
+    height: 117px;
+    width: 177px;;
+}
+
+.blog-title{
+    font-size: 20px;
+    font-weight: 500;
+    margin-right: 15px;
+}
+
+.blog-author{
+    font-size: 16px;
+    color: #9F9F9F;
+}
+
+.blog-author a{
+    color: #562EFF;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+/* -----------------------
+   courses styles 
+--------------------------- */
+
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+  
+}
+
+.course{
+    padding: 16px;
+    width: 245px;
+    box-shadow:0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
+    border-radius: 15px;
+}
+.course-title{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.course-author{
+    color:#ED6B4F;
+    font-size: 14px;
+    margin: -10px 0 5px;
+}
+.course img{
+    width: 224px;
+}
+
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.duration{
+    background: #FFE4E8;
+    padding: 5px 8px;
+    color:#FF4A60;
+    border-radius: 50px;
+    font-size: 14px;
+}
+
+.fa-star{
+    font-size: 12px;
+}
+.fa-star.filled{
+    color: #FFC014
+}
+.fa-star.empty{
+    color: #AEAEAE;
+}
+footer{
+    margin-bottom: 50px;
+}
