--- a/css/styles.css
+++ b/css/styles.css
@@ -150,27 +150,71 @@ footer{
    Mobile styles 
 --------------------------- */
 @media only screen and (max-width:688px) {
-    .container{
-        width: 100%;
+    .top-players{
+        padding: 15px;
     }
-    .players, .blogs, .courses{
-        grid-template-columns: repeat(1,1fr);
+    .players{
+        grid-template-columns: repeat(2,1fr);
+        grid-row-gap: 10px;
     }
 
-    .player, .blog{
-        flex-direction: column;
+    .container{
+        width: 100%;
+        padding: 0;
+       
+    }
+    .player{
+        gap: 10px;
+    }
+    .player-name{
+        font-size: 16px;
+    }
+
+    .player img{
+        width: 50px;
+        height: 50px;
+    }
+
+    .blogs{
+        grid-template-columns: repeat(1,1fr);
+        grid-row-gap: 20px;
+    }
+    
+    .top-blogs{
+        padding: 0 15px;
+    }
+
+    .blog{
+       align-items: center; 
+        gap: 15px;
+    }
+
+    .blog img{
+        height: 100px;
+        width: 130px;;
+    }
+    .blog h3{
+        margin: 0 0 -5px;
+        padding: 0;
+    }
+    .courses{
+      grid-template-columns: repeat(1,1fr);
+      padding: 15px;
+    }
+
+    .course{
+        width: 100%;
+    }
+
+    .course img{
+        width: 80%;
+    }
+    .course-info{
+        justify-content: space-between;
     }
 }
 
 /* tablet devices */
 @media only screen and (min-width: 688px) and (max-width:992px) {
-    .container{
-        width: 100%;
-    }
-    .players, .courses{
-        grid-template-columns: repeat(2, 1fr);
-    }
-    .blogs{
-        grid-template-columns: repeat(1, 1fr);
-    }
+    
 }
